[gd_scene load_steps=7 format=3 uid="uid://cxqyxieu1ybkl"]

[ext_resource type="PackedScene" uid="uid://dnchqt6bdbub" path="res://scenes/character_engineer.tscn" id="1_cpr2p"]
[ext_resource type="Script" path="res://scripts/character_controller.gd" id="1_ytjs0"]
[ext_resource type="PackedScene" uid="uid://cilmyihbwb5tp" path="res://scenes/character_farmer.tscn" id="2_110no"]
[ext_resource type="PackedScene" uid="uid://bmlgf5ofygb6m" path="res://scenes/character_mage.tscn" id="3_hjswl"]

[sub_resource type="Gradient" id="Gradient_o6cb8"]
interpolation_mode = 2
colors = PackedColorArray(0.171135, 0.397805, 0.976721, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_4ijw7"]
gradient = SubResource("Gradient_o6cb8")
use_hdr = true
fill = 1
fill_from = Vector2(0.535613, 0.817664)
fill_to = Vector2(0.495726, 0.0655271)

[node name="CharactersController" type="Node"]
script = ExtResource("1_ytjs0")

[node name="CharacterEngineer" parent="." instance=ExtResource("1_cpr2p")]
position = Vector2(773, 578)

[node name="CharacterFarmer" parent="." instance=ExtResource("2_110no")]
position = Vector2(510, 578)

[node name="CharacterMage" parent="." instance=ExtResource("3_hjswl")]
light_mask = 0
position = Vector2(640, 487)

[node name="PointLight2D2" type="PointLight2D" parent="."]
visible = false
light_mask = 8
visibility_layer = 8
position = Vector2(663, 637)
scale = Vector2(33.3333, 18.875)
color = Color(0.534518, 0.700614, 0.975477, 1)
energy = 6.96
blend_mode = 2
range_item_cull_mask = 24
shadow_enabled = true
shadow_item_cull_mask = 16
texture = SubResource("GradientTexture2D_4ijw7")
offset = Vector2(0, -27.4967)

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -51.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 10
color = Color(0.207512, 0.207512, 0.207512, 1)

[node name="HealSpell" type="ColorRect" parent="."]
light_mask = 0
visibility_layer = 512
anchors_preset = -1
anchor_left = 0.414844
anchor_top = 0.988889
anchor_right = 0.5
anchor_bottom = 1.00278
offset_left = -317.0
offset_top = -42.0001
offset_right = -277.0
offset_bottom = -2.00006
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 6
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="HealSpell"]
light_mask = 0
visibility_layer = 512
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 17
text = "heal barrier"
horizontal_alignment = 1

[node name="LabelHealSpellValue" type="Label" parent="HealSpell"]
light_mask = 0
visibility_layer = 512
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 22
text = "30%"
horizontal_alignment = 1
vertical_alignment = 2

[node name="ThrowRope" type="ColorRect" parent="."]
light_mask = 0
visibility_layer = 512
anchors_preset = -1
anchor_left = 0.414844
anchor_top = 0.988889
anchor_right = 0.5
anchor_bottom = 1.00278
offset_left = -317.0
offset_top = -42.0001
offset_right = -277.0
offset_bottom = -2.00006
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 6
color = Color(1, 1, 0.14902, 1)
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="ThrowRope"]
light_mask = 0
visibility_layer = 512
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -12.0
offset_right = 46.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 17
text = "throw rope"
horizontal_alignment = 1
